<resources>
    <string name="app_name">Posts App</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="read_more">Read More</string>
    <string name="hide">Hide</string>
    <string name="image">Image</string>
    <string name="create_a_new_post">Create a new post</string>
    <string name="create">Create</string>
    <string name="add_button">add button</string>
    <string name="enter_description">Enter Description</string>
    <string name="edit_post">Edit post</string>
    <string name="delete_post_label">Delete Post</string>
    <string name="delete_post_message">You are about to delete this post. Are you sure you want to continue?</string>
    <string name="general_error">Something went wrong</string>
    <string name="refresh">Refresh</string>
    <string name="cannot_edit">Cannot edit new posts</string>
    <string name="required_fields">Title and Description fields are required</string>
</resources>