<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.fragments.CreatePostFragment">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLabelCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/screen_space"
        android:layout_marginTop="@dimen/screen_space"
        android:text="@string/create_a_new_post"
        android:textColor="@color/black"
        android:textSize="@dimen/normal_text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/screen_space"
        android:layout_marginEnd="@dimen/screen_space"
        android:src="@drawable/ic_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtPostTitle"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/screen_space"
        android:layout_marginTop="@dimen/ten"
        android:hint="@string/title"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLabelCreate" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtPostDesc"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/screen_space"
        android:layout_marginTop="@dimen/sixteen"
        android:hint="@string/enter_description"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPostTitle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCreate"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/screen_space"
        android:layout_marginTop="@dimen/fifty"
        android:layout_marginBottom="@dimen/twenty"
        android:paddingVertical="@dimen/sixteen"
        android:text="@string/create"
        android:textAllCaps="false"
        android:textSize="@dimen/normal_text_size"
        app:backgroundTint="@color/green_light"
        app:cornerRadius="@dimen/ten"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPostDesc" />

</androidx.constraintlayout.widget.ConstraintLayout>