<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.PostDetailsFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLabelTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/screen_space"
        android:layout_marginTop="@dimen/screen_space"
        android:layout_marginBottom="@dimen/five"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textSize="@dimen/normal_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        android:layout_width="@dimen/zero"
        android:layout_height="@dimen/zero"
        android:layout_marginHorizontal="@dimen/screen_space"
        android:layout_marginBottom="@dimen/twelve"
        android:textColor="@color/black"
        android:textSize="@dimen/normal_text_size"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLabelTitle" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/one"
        android:layout_marginTop="@dimen/eighty_five"
        android:background="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLabelDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/sixteen"
        android:layout_marginTop="@dimen/eighteen"
        android:layout_marginBottom="@dimen/five"
        android:text="@string/description"
        android:textColor="@color/black"
        android:textSize="@dimen/normal_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tvDesc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDesc"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/screen_space"
        android:layout_marginTop="@dimen/five"
        android:maxLines="2"
        android:textColor="@color/black"
        android:textSize="@dimen/normal_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLabelDesc" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvReadMore"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/zero"
        android:layout_marginTop="@dimen/five"
        android:layout_marginBottom="@dimen/screen_space"
        android:text="@string/read_more"
        android:textColor="@color/green_light"
        android:textSize="@dimen/normal_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tvDesc"
        app:layout_constraintTop_toBottomOf="@id/tvDesc" />

</androidx.constraintlayout.widget.ConstraintLayout>